# TSP

./: CMakeLists.txt  README.md  approximation.cpp  approximation.h  commons.h  core.cpp  core.h  data_model.h  main.cpp  milp_solver.cpp  milp_solver.h  parser.cpp  parser.h  svg_dumper.cpp  svg_dumper.h
data/: cities.txt  region_1_bolshevik.txt  region_2_october_revolution.txt  region_3_mainland.txt  region_4_komsomolets.txt  region_5_kaliningrad.txt  region_6_severny_novaya_zemlya.txt  region_7_sakhaline.txt  region_8_wrangel.txt  region_9_yuzhny_novaya_zemlya.txt  svg_test.txt
